Atualiza estilo do h4 e link parcial

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       <div class="linha"></div>
       <button class="new">Criar nova conta</button>
     </div>
-      <a class="h4" href="#">Crie uma Página</a>
-      para uma celebridade, uma marca ou uma <br>
-      <span class="h4-span">empresa.</span>
+    <div>
+      <p class="h4">
+        <a href="#">Crie uma Página</a> para uma celebridade, uma marca ou uma empresa
+      </p>
+      
+
   </section>
   </header>
 </body>
